--- a/app/src/main/res/layout/activity_tag.xml
+++ b/app/src/main/res/layout/activity_tag.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.gnr.esgi.googlenewsreader.activities.DetailArticleActivity"
+    tools:context="com.gnr.esgi.taggle.activitie.DetailArticleActivity"
     android:orientation="vertical">
 
     <ScrollView
