--- a/app/src/main/res/layout/content_tag_settings.xml
+++ b/app/src/main/res/layout/content_tag_settings.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.gnr.esgi.googlenewsreader.activities.TagSettingsActivity"
+    tools:context="com.gnr.esgi.taggle.activitie.TagSettingsActivity"
     tools:showIn="@layout/activity_tag_settings">
 
     <ListView
