--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     android:weightSum="1"
-    tools:context="com.gnr.esgi.googlenewsreader.activities.SettingsActivity">
+    tools:context="com.gnr.esgi.taggle.activitie.SettingsActivity">
 
     <LinearLayout
         android:orientation="horizontal"
